fix linter, refactor, separation of concerns

--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -12,5 +12,22 @@
     "search": "Search",
     "settings": "Settings",
     "save": "Save",
-    "changeLanguage": "Change language"
+    "changeLanguage": "Change language",
+    "fastAndFree": "Fast and free",
+    "delivery": "delivery through",
+    "wholeCity": "whole bitola!",
+    "noLimit": "without limit for order!",
+    "pork": "Pork",
+    "chicken": "Chicken",
+    "small": "small",
+    "big": "big",
+    "with": "with",
+    "cheese": "cheese",
+    "gr": "gr",
+    "egg": "egg",
+    "meat": "meat",
+    "peppers": "peppers",
+    "allergens": "Allergens- milk, eggs, cereals",
+    "freeDelivery": "Free delivery",
+    "size": "Size"
 }
