--- a/public/locales/mk/mk.json
+++ b/public/locales/mk/mk.json
@@ -12,5 +12,11 @@
     "search": "Пребарувај",
     "settings": "Подесувања",
     "save": "Зачувај",
-    "changeLanguage": "Промени јазик"
+    "changeLanguage": "Промени јазик",
+    "fastAndFree": "Брза и бесплатна",
+    "delivery": "достава низ",
+    "wholeCity": "цела битола!",
+    "noLimit": "без минимум лимит за нарачка!",
+    "allergens": "Алергени- млеко, јајца, житни култури",
+    "freeDelivery": "Бесплатна достава низ цела Битола"
 }
